--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,7 @@
-Flask
-torch
-torchvision
-Pillow
-requests
-numpy
-scipy
-gunicorn
-flask-cors
+Flask==2.0.1
+torch==1.10.0
+torchvision==0.11.1
+Pillow==8.4.0
+requests==2.26.0
+scipy==1.7.1
+Flask-Cors==3.0.10
